+ Added getIcon/getIconPath methods to atkTreeNode to override icons
  more easily (without the need for creating a separate theme). [Peter]
+ Added atkGetSessionManager function. [Peter]
+ Added default configs/ directory to skel, including readme file. [Ivo]
+ Added str_replace javascript function to ATK javascript tools. [Boy]
+ Added html2specialchars function. [Boy]
* Sorting on atkManyToOneRelation columns now sorts on the actual value
  instead of on the id. [Ivo]
* Moved addOnChangeHandler() to atkAttribute. [Boy]
* atkNumberAttribute now renders NULL values as "" instead of 0. [Ivo]
* Replaced some deprecated text() calls with atktext(). [Yury, Guido] 
* Decomposed atkNode::dispatch() to loadDispatchPage() which does the actual
  loading of the page for dispatch() to render. [Boy]
* Fixed bug in atkTreeNode that didn't allow the usage of string based key and
  parent fields. [Peter]
* Fixed bug in atkOneToOneRelation that caused the foreign key in the record 
  to be stored to be an array instead of a value. [Boy]
* Made atkThemeCompiler able to handle modules not located in the atkroot. i
  [Boy]
* Added ability to reset instances created by atkinstance if supported by the
  node and added support for atkTheme. [Boy]
* Fixed error reporting for embeded atkOneToManyRelation. [Boy]
* atkOneToManyRelation navigation links are not shown if there is no 
  filter. [Boy]
* Upon validating we don't check in the postvars for the value of the id but 
  in the record that is passed. [Boy]
* Added new param to dispatch_url allowing you to dispatch to other php files 
  than dispatch.php. [Boy]
* Added 'class' HTML attribute with name of attribute for atkAttribute,
  atkDateAttribute, atkListAttribute, atkNumberAttribute, atkOneToManyRelation 
  and atkManyToOnerelation. [Boy] 
* Fixed ATK sometimes placing focus on hidden objects. [Boy]
* Upgraded Smarty to 2.6.11. [Boy]
* Fixed problem with session expiring on some servers. [Ivo]